Fixed z-index property for language icon.........

--- a/src/app/components/language-selector/language-selector.scss
+++ b/src/app/components/language-selector/language-selector.scss
@@ -3,7 +3,7 @@
 	font-weight: normal;
 	cursor: pointer;
 	position: relative;
-	z-index: 99;
+	z-index: 1;
 	.language-dropdown {
 		position: absolute;
 		width: 100%;
